[gd_scene load_steps=16 format=2]

[ext_resource path="res://GameController.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Game.gd" type="Script" id=2]
[ext_resource path="res://Fonts/MSYHMONO.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.733333, 0.678431, 0.627451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=9]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 42
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 32
extra_spacing_top = 8
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.560784, 0.478431, 0.4, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 0.498039 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=12]
size = 68
font_data = ExtResource( 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="GameController" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, -113 )

[node name="BackGround" type="Panel" parent="."]
margin_right = 4096.0
margin_bottom = 4096.0
custom_styles/panel = SubResource( 1 )

[node name="Panel" type="Panel" parent="BackGround"]
margin_left = 1788.0
margin_top = 1788.0
margin_right = 2308.0
margin_bottom = 2308.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="BackGround/Panel"]
position = Vector2( 256, 256 )
current = true

[node name="Debug" type="Node2D" parent="BackGround/Panel"]
visible = false

[node name="MapArray" type="Label" parent="BackGround/Panel/Debug"]
margin_left = -707.0
margin_top = -5.0
margin_right = -25.0
margin_bottom = 530.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "text"

[node name="CreateBlockButton" type="Button" parent="BackGround/Panel/Debug"]
margin_left = 610.0
margin_top = -156.0
margin_right = 776.0
margin_bottom = -31.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "创建块"

[node name="CreateTestMapButton" type="Button" parent="BackGround/Panel/Debug"]
margin_left = 602.0
margin_top = -4.0
margin_right = 796.0
margin_bottom = 120.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "创建地图"

[node name="CreateWinMapButton" type="Button" parent="BackGround/Panel/Debug"]
margin_left = 609.0
margin_top = 142.0
margin_right = 789.0
margin_bottom = 265.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "胜利地图"

[node name="CreateLoseMapButton" type="Button" parent="BackGround/Panel/Debug"]
margin_left = 614.0
margin_top = 309.0
margin_right = 794.0
margin_bottom = 432.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "失败地图"

[node name="ShowDialogButton" type="Button" parent="BackGround/Panel/Debug"]
margin_left = 613.0
margin_top = 464.0
margin_right = 825.0
margin_bottom = 575.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "显示提示框"

[node name="Label" type="Label" parent="BackGround"]
anchor_right = 0.506
margin_left = 1792.0
margin_top = 1622.0
margin_right = -104.576
margin_bottom = 1703.0
custom_colors/font_color = Color( 0.466667, 0.431373, 0.396078, 1 )
custom_colors/font_color_shadow = Color( 0.466667, 0.431373, 0.396078, 1 )
custom_fonts/font = SubResource( 3 )
text = "2048"
valign = 1

[node name="Label2" type="Label" parent="BackGround"]
anchor_right = 0.506
margin_left = 1792.0
margin_top = 1706.0
margin_right = 43.4241
margin_bottom = 1775.0
custom_colors/font_color = Color( 0.466667, 0.431373, 0.396078, 1 )
custom_fonts/font = SubResource( 4 )
text = "合并相同方块，得到2048的方块!"
valign = 1

[node name="Label3" type="Label" parent="BackGround"]
margin_left = 1792.0
margin_top = 2336.0
margin_right = 2308.0
margin_bottom = 2414.0
custom_colors/font_color = Color( 0.466667, 0.431373, 0.396078, 1 )
custom_fonts/font = SubResource( 4 )
text = "如何玩: 用你的方向键 移动方块。当两个具有相同数字的方块接触时，它们会合并为一个！数字到达2048即为胜利~"
valign = 1
autowrap = true

[node name="Score" type="Panel" parent="BackGround"]
margin_left = 2059.0
margin_top = 1624.0
margin_right = 2304.0
margin_bottom = 1703.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Title" type="Label" parent="BackGround/Score"]
margin_right = 73.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0.933333, 0.882353, 0.788235, 1 )
custom_colors/font_outline_modulate = Color( 0.933333, 0.882353, 0.788235, 1 )
custom_colors/font_color_shadow = Color( 0.933333, 0.882353, 0.788235, 1 )
custom_fonts/font = SubResource( 5 )
text = "总分"
align = 1
valign = 1

[node name="Content" type="Label" parent="BackGround/Score"]
margin_left = 88.0
margin_right = 240.0
margin_bottom = 79.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.313726, 0.313726, 0.313726, 1 )
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="NewGame" type="Button" parent="BackGround"]
margin_left = 2139.0
margin_top = 1717.0
margin_right = 2304.0
margin_bottom = 1763.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.976471, 0.964706, 0.94902, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
text = "新游戏"

[node name="BgBlock" type="Node2D" parent="."]
position = Vector2( 1788, 1788 )

[node name="Blocks" type="Node2D" parent="."]
position = Vector2( 1788, 1788 )

[node name="GameOver" type="Panel" parent="."]
visible = false
margin_left = 1788.0
margin_top = 1788.0
margin_right = 2308.0
margin_bottom = 2308.0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="GameOver"]
margin_top = 150.0
margin_right = 520.0
margin_bottom = 263.0
custom_colors/font_color = Color( 0.466667, 0.431373, 0.396078, 1 )
custom_colors/font_color_shadow = Color( 0.466667, 0.431373, 0.396078, 1 )
custom_fonts/font = SubResource( 12 )
text = "游戏结束"
align = 1
valign = 1

[node name="Button" type="Button" parent="GameOver"]
margin_left = 195.0
margin_top = 318.0
margin_right = 325.0
margin_bottom = 368.0
custom_colors/font_color = Color( 0.976471, 0.964706, 0.94902, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
text = "新游戏"

[connection signal="score_changed" from="GameController" to="." method="_on_GameController_score_changed"]
[connection signal="button_down" from="BackGround/Panel/Debug/CreateBlockButton" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="BackGround/Panel/Debug/CreateTestMapButton" to="." method="_on_CreateTestMapButton_button_down"]
[connection signal="button_down" from="BackGround/Panel/Debug/CreateWinMapButton" to="." method="_on_CreateWinMapButton_button_down"]
[connection signal="button_down" from="BackGround/Panel/Debug/CreateLoseMapButton" to="." method="_on_CreateLoseMapButton_button_down"]
[connection signal="button_down" from="BackGround/Panel/Debug/ShowDialogButton" to="." method="_on_ShowDialogButton_button_down"]
[connection signal="button_down" from="BackGround/NewGame" to="." method="_on_NewGame_button_down"]
[connection signal="button_down" from="GameOver/Button" to="." method="_on_NewGame_button_down"]
